# project_template

./: .clang-format  .travis.yml  CMakeLists.txt  CmakeLists.txt  LICENSE  README.md
cmake/: CompilerWarnings.cmake  Conan.cmake  Sanitizers.cmake
src/: CMakeLists.txt  CmakeLists.txt  main.cpp
src/qt/: CMakeLists.txt  HelloWorld.cpp  HelloWorld.hpp  HelloWorldMain.cpp
tests/: CMakeLists.txt  constexpr_test.cpp  tests.cpp
